--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ coverage.xml
 docs/_build/
 
 # PyBuilder
-target/
+target/git@github.com:courtois-neuromod/friends_annotations.git
 
 # DotEnv configuration
 .env
@@ -84,3 +84,10 @@ target/
 
 # Mypy cache
 .mypy_cache/
+
+#data
+*.mkv
+*.mp4
+
+#Notebooks
+*.ipynb 
