--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "PySceneDetect"]
 	path = PySceneDetect
 	url = git@github.com:courtois-neuromod/PySceneDetect.git
-	branch = dev
+	branch = master
