took off credentials from repo

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,7 @@ target/git@github.com:courtois-neuromod/friends_annotations.git
 ./data/CorpusEmotions/
 ./data/audiofiles/
 ./results/
+
+
+#credentials
+./src/exploration/credentials-Steve-neuromod.json
