--- a/annotation_results/Online/s6/s06_episodes.yaml
+++ b/annotation_results/Online/s6/s06_episodes.yaml
@@ -12,3 +12,16 @@ s06e01:
   authors: "Adam Chase"
   crazy_for_friends_transcription: "Eric Aasen"
   crazy_for_friends_transcript_url: "https://www.livesinabox.com/friends/season6/601vegas.htm"
+
+
+
+
+
+
+s06e:
+  title: ""
+  wiki_description : > 
+      Ross breaks up with Bonnie in order to get back with Rachel, who prompts him to first read 
+  authors: ""
+  crazy_for_friends_transcription: "Eric Aasen"
+  crazy_for_friends_transcript_url: ""
