--- a/annotation_results/Online/s7/s07_episodes.yaml
+++ b/annotation_results/Online/s7/s07_episodes.yaml
@@ -12,3 +12,16 @@ s07e01:
   authors: "Wil Calhoun (story); David Crane & Marta Kauffman (teleplay)"
   crazy_for_friends_transcription: "Eric Aasen"
   crazy_for_friends_transcript_url: "https://www.livesinabox.com/friends/season7/701towmt.htm"
+
+
+
+
+
+
+s07e:
+  title: ""
+  wiki_description : > 
+      Ross breaks up with Bonnie in order to get back with Rachel, who prompts him to first read 
+  authors: ""
+  crazy_for_friends_transcription: "Eric Aasen"
+  crazy_for_friends_transcript_url: ""
