--- a/annotation_results/Online/s5/s05_episodes.yaml
+++ b/annotation_results/Online/s5/s05_episodes.yaml
@@ -105,7 +105,6 @@ s05e08:
 s05e09:
   title: "The One with Ross' Sandwich"
   wiki_description : > 
-      Ross breaks up with Bonnie in order to get back with Rachel, who prompts him to first read 
       Phoebe takes a literature course and regrets bringing Rachel, who does not take the class 
       seriously. Joey tires of covering up Monica and Chandler's secret relationship. After creating 
       a big fuss when Ross discovers that someone at work ate his sandwich, he is forced to take 
@@ -171,7 +170,6 @@ s05e13:
 s05e14:
   title: "The One Where Everybody Finds Out"
   wiki_description : > 
-      Ross breaks up with Bonnie in order to get back with Rachel, who prompts him to first read 
       Ross applies for Ugly Naked Guy's apartment when he moves out, only to find there is fierce 
       competition. While viewing the apartment with Ross, Rachel and Phoebe happen to see Monica 
       and Chandler through the window, having sex. Joey is relieved that everyone except Ross 
@@ -242,7 +240,6 @@ s05e18:
 s05e19:
   title: "The One Where Ross Can't Flirt"
   wiki_description : > 
-      Ross breaks up with Bonnie in order to get back with Rachel, who prompts him to first read 
       Rachel secretly helps out Ross after he botches flirting with the pizza delivery girl. Joey 
       invites his grandmother over to watch his role on Law & Order - but when his part has been 
       cut, he quickly improvises his own two-minute role and sneaks in the video for everyone to 
@@ -300,7 +297,16 @@ s05e22:
 s05e23:
   title: "The One in Vegas (Parts 1 & 2)"
   wiki_description : > 
-      Ross breaks up with Bonnie in order to get back with Rachel, who prompts him to first read 
+      Monica has lunch with Richard but does not tell Chandler, who eventually finds out, ruining 
+      their anniversary. The gang goes to Las Vegas to visit Joey. Monica, Chandler, and Phoebe 
+      find him working at Caesars Palace while his movie is shut down. Ross sees Rachel naked 
+      through his apartment window, mistaking it as an invitation to "the physical act of love". 
+      On the plane to Vegas, Ross and Rachel needle each other; he draws a mustache on her with a 
+      marker pen while she is asleep. In Vegas, Ross and Rachel get drunk. Joey discovers his 
+      "identical hand twin" that he believes is a money-making opportunity to fund his movie. Phoebe 
+      feuds with a slots "lurker" and gets ejected from the casino, though she returns as "Regina 
+      Phalange". Chandler and Monica decide to get married. At the wedding chapel, Ross and Rachel 
+      drunkenly stumble out of the chapel ahead of them.
   authors: "Ted Cohen & Andrew Reich (Part 1), and Gregory S. Malins & Scott Silveri (Part 2)"
   crazy_for_friends_transcription: "Eric Aasen"
   crazy_for_friends_transcript_url: "https://www.livesinabox.com/friends/season5/523toiv.htm"
