--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,6 @@
 *.tsv annex.largefiles=nothing
 *.npz annex.largefiles=nothing
 *.py annex.largefiles=nothing
+*.ipynb
 * annex.backend=MD5E
 **/.git* annex.largefiles=nothing
