--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,6 @@
 *.tsv annex.largefiles=nothing
 *.npz annex.largefiles=nothing
 *.py annex.largefiles=nothing
-*.ipynb=nothing
+*.ipynb annex.largefiles=nothing
 * annex.backend=MD5E
 **/.git* annex.largefiles=nothing
